--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
+    <title>Webpack v4 Demo</title>
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="text/javascript" src="../dist/main.js" charset="utf-8"></script>
+    <!-- <script type="text/javascript" src="../dist/main.js" charset="utf-8"></script> -->
 </body>
 
 </html>
