--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Webpack v4 Demo</title>
+    <link rel="shortcut icon" href="https://cdn-images-1.medium.com/max/1600/0*QWJsNmIu81bhqgds.png" type="image/x-icon" />
 </head>
 
 <body>
     <div id="root"></div>
-    <!-- <script type="text/javascript" src="../dist/main.js" charset="utf-8"></script> -->
 </body>
 
 </html>
